# gallery

./: Cargo.toml  build.rs  magick_functions.rs
src/: image_entry.rs  isolated_ffmpeg_decoder.rs  layout.rs  macros.rs  main.rs  utils.rs  video_entry.rs
src/widgets/: image_frame.rs  mod.rs  video_player.rs
