[package]
name = "gallery"
version = "0.1.0"
edition = "2021"
default-run = "gallery"

[env]
FFMPEG_PATH = "C:/Program Files/ffmpeg"
IMAGE_MAGICK_DIR = "C:/Program Files/ImageMagick-7.1.1-Q16-HDRI"

[alias]
build-all = "build --bin gallery --release && cargo build --bin isolated_ffmpeg_decoder --release"
run-all = "build --bin isolated_ffmpeg_decoder && cargo run --bin gallery"

[[bin]]
name = "isolated_ffmpeg_decoder"
path = "src/isolated_ffmpeg_decoder.rs"

[dependencies]
crossbeam = "0.8.4"
dicom = { version = "0.7.1", features = ["image"] }
eframe = "0.27.2"
ffmpeg-next = "7.0.2"
futures = "0.3.30"
image = "0.25.2"
imagepipe = "0.5.0"
interprocess = "2.2.1"
jpeg-decoder = "0.3.1"
rawloader = "0.37.1"
rayon = "1.10.0"
rfd = "0.14.1"
rodio = "0.19.0"
trash = "4.1.1"
jbig2dec = "0.3"

[build-dependencies]
winresource = "0.1.17"
